// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`charge.captured marks the order as paid 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      6925,
      2019-02-07T18:45:12.000Z,
      "ch_1E1Hs4HEIqCf0NlguuGDYPjL",
      43.16,
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": Promise {},
    },
  ],
}
`;

exports[`charge.captured sends a shipped email 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Nancy Whitehead",
      "nancy@mew.org",
      Object {
        "fixedFee": 25,
        "items": Array [
          Object {
            "cost": 8400,
            "date": "1976-10-06T04:00:00.000Z",
            "name": "Carol Danvers",
            "quantity": 6,
          },
        ],
        "orderDate": "2018-01-11T18:40:27.707Z",
        "orderId": "RG-BC201902-150464",
        "percentageFee": 0.021,
        "serviceFee": 266,
        "serviceFeeUri": "https://www.cityofboston.gov/payments/faqs.asp",
        "shippingAddress1": "Avengers Tower",
        "shippingAddress2": "",
        "shippingCity": "New York",
        "shippingCompanyName": "US Avengers",
        "shippingName": "Squirrel Girl",
        "shippingState": "NY",
        "shippingZip": "10001",
        "subtotal": 8400,
        "total": 8666,
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`charge.created sends birth email 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Nancy Whitehead",
      "nancy@mew.org",
      Object {
        "fixedFee": 25,
        "items": Array [
          Object {
            "cost": 8400,
            "date": "1976-10-06T04:00:00.000Z",
            "name": "Carol Danvers",
            "quantity": 6,
          },
        ],
        "orderDate": "2018-01-11T18:40:27.707Z",
        "orderId": "RG-BC201901-414211",
        "percentageFee": 0.021,
        "serviceFee": 266,
        "serviceFeeUri": "https://www.cityofboston.gov/payments/faqs.asp",
        "shippingAddress1": "Avengers Tower",
        "shippingAddress2": "",
        "shippingCity": "New York",
        "shippingCompanyName": "US Avengers",
        "shippingName": "Squirrel Girl",
        "shippingState": "NY",
        "shippingZip": "10001",
        "subtotal": 8400,
        "total": 8666,
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`charge.created sends death email 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Nancy Whitehead",
      "nancy@mew.org",
      Object {
        "fixedFee": 25,
        "items": Array [
          Object {
            "cost": 9800,
            "date": null,
            "name": "MAUDIE MERTZ",
            "quantity": 7,
          },
          Object {
            "cost": 1400,
            "date": null,
            "name": "MAUDIE MERTZ",
            "quantity": 1,
          },
        ],
        "orderDate": "2018-01-11T18:40:27.707Z",
        "orderId": "DC-20171215-yg4lk",
        "percentageFee": 0.021,
        "serviceFee": 266,
        "serviceFeeUri": "https://www.cityofboston.gov/payments/faqs.asp",
        "shippingAddress1": "Avengers Tower",
        "shippingAddress2": "",
        "shippingCity": "New York",
        "shippingCompanyName": "US Avengers",
        "shippingName": "Squirrel Girl",
        "shippingState": "NY",
        "shippingZip": "10001",
        "subtotal": 11200,
        "total": 11466,
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;
